# car-project

./: CMakeLists.txt  README.md
database/: car_project.db
lib/: CMakeLists.txt
lib/GUI/: CMakeLists.txt
lib/GUI/include/: CarCardWindow.h  LoginWindow.h  QT-config.h  RegistrationWindow.h  RootWindow.h  UserAccount.h  UserWindow.h  button.h  loginWindow.h  registrationWindow.h  shader.h  userWindow.h  windowCoordinats.h
lib/GUI/src/: CarCardWindow.cpp  LoginWindow.cpp  RegistrationWindow.cpp  RootWindow.cpp  UserAccount.cpp  UserWindow.cpp  loginWindow.cpp  registrationWindow.cpp  shader.cpp  userWindow.cpp  windowCoordinats.cpp
lib/database/: CMakeLists.txt
lib/database/include/: Car.h  GeneralDB.h  UserDB.h  database_action.h
lib/database/src/: Car.cpp  GeneralDB.cpp  UserDB.cpp  database_action.cpp
lib/shaders/: button-fragment.glsl  button-vertex.glsl
src/: main.cpp
